All Sites: Wrap words in <code> block to avoid breaking mobile layout.
Fixes gh-265
Closes gh-273

--- a/themes/jquery/css/base.css
+++ b/themes/jquery/css/base.css
@@ -1897,6 +1897,7 @@ code {
 	background-color: #eee;
 	border-radius: 3px;
 	white-space: pre;
+	word-wrap: break-word;
 }
 
 pre code {
